# fann-analysis

./: CMakeLists.txt  README.md
include/: inputs.h  netGradient.h  pgxx.h
src/: experiment.cpp  inputs.cpp  netGradient.cpp  pgxx.cpp
test/: inputs_test.cpp  netGradient_test.cpp
